IMPALA-5080: OutOfMemory PermGen space
The problem is that over time our usage of PermGen space has
gradually gone up, recently hitting a point where we may run
out during testing. The fix is to increase the allowed max
perm gen space.

The default is 64mb on 32bit systems and 82mb on 64bit systems.
After bumping it up to 128mb, I haven't seen any failures on my
machine.

I also verified that this is not a leak by running the test,
test_java_udfs, 10 times, checking the perm gen usage with jmap,
running it a further 300 times, and checking that the perm gen
usage remained the same.

Change-Id: Iccfb69cdf7958e053890089db6a82ad491fb5b9d
Reviewed-on: http://gerrit.cloudera.org:8080/6642
Tested-by: Impala Public Jenkins
Reviewed-by: Matthew Jacobs <mj@cloudera.com>